# SomNLP-Corpus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md
configs/: pipeline.toml
crates/common/: Cargo.toml
crates/common/src/: hash.rs  lib.rs  normalize.rs  registry.rs  reject.rs  types.rs
crates/corpus-pipeline/: Cargo.toml
crates/corpus-pipeline/src/: config.rs  drop_inspect.rs  io.rs  lib.rs  pipeline_summary.rs  progress.rs  report.rs
crates/corpus-pipeline/src/clean/: entities.rs  gates.rs  heuristics.rs  mod.rs  mojibake.rs  repeated.rs  stage.rs  strip.rs  whitespace.rs
crates/corpus-pipeline/src/deep_clean/: boilerplate.rs  config.rs  contact.rs  html.rs  intra_dedup.rs  lid.rs  mod.rs  normalize.rs  stage.rs
crates/corpus-pipeline/src/lid/: mod.rs  stage.rs
crates/corpus-pipeline/src/near_dedup/: lsh.rs  minhash.rs  mod.rs  shingle.rs  union_find.rs
crates/corpus-pipeline/tests/: mojibake_golden.rs
crates/corpus-pipeline/tests/fixtures/: mojibake.jsonl
crates/corpus-pipeline/tests/fixtures/lid/: eval.jsonl
crates/corpus-tools/: Cargo.toml
crates/corpus-tools/src/: cc100.rs  cli.rs  export.rs  hf.rs  jsonl.rs  lib.rs  madlad.rs  mc4.rs  mt560.rs  normalize.rs  parquet_source.rs  quran.rs  stats.rs  wikipedia.rs
docs/: ARCHITECTURE.md  CLEANING_PLAN.md  CLEANING_STRATEGY.md  DATA_PIPELINE.md  ID_STRATEGY.md  MERGE_SEMANTICS.md  METADATA_SCHEMA.md  QUALITY_METADATA.md  SCHEMA_REVIEW.md  SOURCES.md
tokenizer/: .gitignore  PAPER.md  benchmark_results.json  common.py  prepare_corpus.py  requirements.txt  somali-bpe-tokenizer.json  test_tokenizer.py  tokenizer_stats.json  train.py
