[workspace]
members = ["crates/common", "crates/corpus-tools", "crates/corpus-pipeline"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SomNLP Contributors"]
repository = "https://github.com/dugsiiye-labs/SomNLP-Corpus"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Errors & CLI
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# Hashing & text normalization
sha2 = "0.10"
blake2 = "0.10"
unicode-normalization = "0.1"

# Cleaning
encoding_rs = "0.8"
html-escape = "0.2"
regex = "1"

# Language identification
whatlang = "0.16"
lingua = "1"

# Dedup / RNG
rand = "0.8"
rand_chacha = "0.3"
rustc-hash = "2"

# HTTP & IO
reqwest = { version = "0.12", default-features = false, features = ["blocking", "gzip", "json", "rustls-tls"] }
tempfile = "3"
flate2 = "1"
xz2 = "0.1"

# Columnar / parquet (dataset shards)
arrow = "54"
arrow-array = "54"
arrow-schema = "54"
parquet = { version = "54", features = ["arrow"] }

# UX
indicatif = "0.17"
