[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared corpus record types"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = { workspace = true }
