[package]
name = "corpus-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Somali public dataset download and merge tools"

[lib]
name = "corpus_tools"
path = "src/lib.rs"

[[bin]]
name = "download_hplt_so"
path = "src/bin/download_hplt_so.rs"

[[bin]]
name = "download_cc100_so"
path = "src/bin/download_cc100_so.rs"

[[bin]]
name = "download_mc4_so"
path = "src/bin/download_mc4_so.rs"

[[bin]]
name = "download_opus_so"
path = "src/bin/download_opus_so.rs"

[[bin]]
name = "download_madlad_so"
path = "src/bin/download_madlad_so.rs"

[[bin]]
name = "download_mt560_so"
path = "src/bin/download_mt560_so.rs"

[[bin]]
name = "download_quran_so"
path = "src/bin/download_quran_so.rs"

[[bin]]
name = "merge_corpora"
path = "src/bin/merge_corpora.rs"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
parquet = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
xz2 = { workspace = true }
